# home-lab-easy-kit

./: .clang-format  .gitignore  README.md  README2.md  RPiExtender.json  adctest.json  addvdev.sh  adxl350.json  alldev.json  build.sh  can.json  can_a.json  clean.sh  config.json  customize.sh  dac8564.json  dacdev.json  debug.sh  debug_monitor.sh  deskdev.json  gendox.sh  global.json  make_venv.sh  metrics.sh  null.json  pacemakerdev.json  rmvdev.sh  spiflash.json  spiproxy.json  spwm.json  startocd.sh  step_motors.json  test.json  timetrackerdev.json  utils.sh
customizer/customizer/: AD9850DevCustomizer.py  ADCDevCustomizer.py  BaseCustomizer.py  BaseDeviceCustomizer.py  CanCustomizer.py  DeskDevCustomizer.py  DeviceCustomizer.py  EXTIHubCustomizer.py  ExclusiveDeviceCustomizer.py  FirmwareCustomizer.py  GPIODevCustomizer.py  HLEKIOCustomizer.py  HLEKWizard.py  IRRCCustomizer.py  InfoCustomizer.py  LCD1602aCustomizer.py  LibhlekCustomizer.py  NonExclusiveDevice.py  PaceMakerDevCustomizer.py  RTCCustomizer.py  SPIDACCustomizer.py  SPIProxyCustomizer.py  SPWMCustomizer.py  SourceFileParser.py  StepMotorDevCustomizer.py  TimeTrackerDevCustomizer.py  UartProxyCustomizer.py  Wizard.py  customizer.py  keywords.py  stm32f103.py  tools.py
customizer/templates/firmware/: CMakeLists.txt  toolchain.cmake
customizer/templates/firmware/inc/: ad9850_conf.h  adc_conf.h  can_conf.h  desk_conf.h  fw.h  fw_adcdev.h  fw_can.h  fw_deskdev.h  fw_exti.h  fw_gpiodev.h  fw_info.h  fw_irrc.h  fw_lcd1602a.h  fw_rtc.h  fw_spwm.h  fw_step_motor.h  fw_uart_proxy.h  gpio_conf.h  i2c_proto.h  info_conf.h  irrc_conf.h  lcd1602a_conf.h  pacemakerdev_conf.h  rtc_conf.h  spidac_conf.h  spiproxy_conf.h  spwm_conf.h  step_motor_conf.h  timetrackerdev_conf.h  uart_proxy_conf.h
customizer/templates/libconfig/: CMakeLists.txt
customizer/templates/libconfig/inc/: ad9850_conf.hpp  adc_conf.hpp  can_conf.hpp  desk_conf.hpp  gpio_conf.hpp  info_conf.hpp  irrc_conf.hpp  lcd1602a_conf.hpp  libconfig.hpp  pacemakerdev_conf.hpp  rtc_conf.hpp  spidac_conf.hpp  spiproxy_conf.hpp  spwm_conf.hpp  step_motor_conf.hpp  timetrackerdev_conf.hpp  uartproxy_conf.hpp
customizer/templates/libconfig/src/: ad9850_conf.cpp  adc_conf.cpp  can_conf.cpp  desk_conf.cpp  gpio_conf.cpp  info_conf.cpp  irrc_conf.cpp  lcd1602a_conf.cpp  pacemakerdev_conf.cpp  rtc_conf.cpp  spidac_conf.cpp  spiproxy_conf.cpp  spwm_conf.cpp  step_motor_conf.cpp  timetrackerdev_conf.cpp  uartproxy_conf.cpp
customizer/templates/libhlek/: CMakeLists.txt
customizer/templates/libhlek/inc/: ad9850_common.hpp  adc_common.hpp  can_common.hpp  desk_common.hpp  gpio_common.hpp  info_common.hpp  irrc_common.hpp  lcd1602a_common.hpp  pacemakerdev_common.hpp  rtc_common.hpp  spidac_common.hpp  spiproxy_common.hpp  spwm_common.hpp  step_motor_common.hpp  timetrackerdev_common.hpp  uart_proxy_common.hpp
customizer/templates/monitor/: CMakeLists.txt
customizer/templates/software/: CMakeLists.txt
customizer/templates/software/example/: CMakeLists.txt
customizer/templates/software/inc/: sw.h  sw_adcdev.h  sw_can.h  sw_deskdev.h  sw_gpiodev.h  sw_info.h  sw_irrc.h  sw_lcd1602a.h  sw_rtc.h  sw_spwm.h  sw_step_motor.h  sw_uart_proxy.h
customizer/templates/software/testtool/: CMakeLists.txt
doc/: ARCHITECTURE.md  CONFIGURATION.md  DEVICES.md  EXAMPLE.md  FAQ.md  INTRODUCTION.md  LIBHLEK.md  PROTOCOL.md  WORKFLOW.md
doc/components/: CircBuffer.md
doc/devices/: AD9850Dev.md  ADCDev.md  ADXL345.md  CanDev.md  DESKDev.md  GPIODev.md  GSMModem.md  HMC5883L.md  INFODev.md  IRRCDev.md  LCD1602ADev.md  PaceMakerDev.md  RTCDev.md  SPIDac.md  SPIProxyDev.md  SPWMDev.md  StepMotorDev.md  TimeTrackerDev.md  UARTProxyDev.md  (+1 more)
doxygen/: doxygen_firmware.conf  doxygen_software.conf  layout.xml
firmware/: CMakeLists.txt  build.sh  flash.sh  toolchain.cmake
hlekio/: Makefile  bashutil.sh  break.sh  build_dtb_overlay.sh  build_kernel.sh  build_ko.sh  build_test.sh  clean_ko.sh  gen_start_kgdb.py  hlekio.json  hlekio_common.c  hlekio_common.h  hlekio_common_fops.c  hlekio_common_fops.h  hlekio_hw.h  hlekio_in_fops.c  hlekio_in_fops.h  hlekio_in_isr.c  hlekio_in_isr.h  hlekio_init.c  hlekio_init.h  hlekio_ioctl.h  hlekio_out_fops.c  hlekio_out_fops.h  hlekio_probe.c  hlekio_probe.h  hlekio_test_in.c  hlekio_test_out.c  install_prereq.sh  load_dtb_overlay.sh  load_ko.sh  recover_kernel.sh  test.sh  write_kernel.sh
json/: alldev.json  can_b.json  dac7611.json  dac8550.json  dac8564.json  dacdev.json  deskdev.json  spiproxy.json  spwm.json  timetrackerdev.json
misc/adxl345_monitor/: CMakeLists.txt
misc/adxl345_monitor/src/: main.cpp
misc/radiation_pattern/: CMakeLists.txt  radpattern.json
misc/radiation_pattern/inc/: main.hpp
misc/radiation_pattern/plot/: main.py
misc/radiation_pattern/plot/data/: background.csv  data.csv
misc/radiation_pattern/src/: main.cpp
misc/time_track_test/: CMakeLists.txt  build.sh  clean.sh  hlekio.json  main.py  tb_ad9850dev.json  tb_timetrackerdev.json  timetrackerdev.json
misc/time_track_test/inc/: main.hpp
misc/time_track_test/src/: main.cpp
scripts/: hlekenv.sh  static_check_fw.sh  utils.sh
software/: CMakeLists.txt  build.sh  install.sh
software/example/src/: main.cpp
software/inc/: adcdev.hpp  can.hpp  deskdev.hpp  ekit_bus.hpp  ekit_device.hpp  ekit_error.hpp  ekit_i2c_bus.hpp  gpio_dev.hpp  gsmmodem.hpp  info_dev.hpp  irrc.hpp  lcd1602a.hpp  rtc.hpp  spwm.hpp  step_motor.hpp  texttools.hpp  tools.hpp  uartdev.hpp
software/monitor/: handlers.cpp  handlers.hpp  monitor.cpp  monitor.hpp
software/src/: adcdev.cpp  can.cpp  deskdev.cpp  ekit_bus.cpp  ekit_error.cpp  ekit_firmware.cpp  ekit_i2c_bus.cpp  gpio_dev.cpp  gsmmodem.cpp  info_dev.cpp  irrc.cpp  lcd1602a.cpp  rtc.cpp  spwm.cpp  step_motor.cpp  tools.cpp  uartdev.cpp
software/termui/: termui.cpp  termui.hpp
software/testtool/: circbuffer_tests.cpp  circbuffer_tests.hpp  misc_tests.cpp  misc_tests.hpp  sync_tests.cpp  sync_tests.hpp  synchronization.h  test.sh  testtool.cpp  testtool.hpp  text_tests.cpp  text_tests.hpp  timer_tests.cpp  timer_tests.hpp
(+229 files in other folders)
